# docker-plugin-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/docker-plugin-cpp/: logger.h  plugin.h
lib/include/docker-plugin-cpp/ipam/: api.h
lib/include/docker-plugin-cpp/network/: api.h
lib/include/docker-plugin-cpp/volume/: api.h
lib/src/: http_server.cpp  http_server.h  logger.cpp  plugin.cpp  serialize.cpp  serialize.h  uds_server.cpp  uds_server.h
sample_volume/: CMakeLists.txt
sample_volume/include/: util.h
sample_volume/src/: main.cpp
